75p까지 봄. 13일까지 핵심만 보기(3,5,6,8장). 나머지는 인터뷰때.백준풀기

--- a/DoIt_VS/DoIt_VS.vcxproj.filters
+++ b/DoIt_VS/DoIt_VS.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="Q_16_17_18.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="practice_2-4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
